# steptrace

./: index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: build.yml
src/: App.css  App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  lib.rs  main.rs  state.rs
src-tauri/src/annotate/: markers.rs
src-tauri/src/capture/: screenshot.rs
src-tauri/src/config/: mod.rs
src-tauri/src/export/: mod.rs
src-tauri/src/input/: listener.rs
src-tauri/src/session/: manager.rs  model.rs
src/components/: RecordingToolbar.tsx  ReviewScreen.tsx
src/lib/: ipc.ts  types.ts
