[package]
name = "steptrace"
version = "0.1.0"
description = "Step recording tool for infrastructure procedure documentation"
authors = ["munenick"]
license = "MIT"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "steptrace_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.3", features = ["tray-icon"] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"

# Input monitoring
rdev = "0.5"

# Screenshot capture
xcap = "0.7"

# Image processing & annotation
image = "0.25"
imageproc = "0.25"
ab_glyph = "0.2"

# Async
tokio = { version = "1", features = ["full"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Config
toml = "0.8"

# UUID for step IDs
uuid = { version = "1", features = ["v4", "serde"] }

# Base64 for image embedding
base64 = "0.22"
